# you-tube-rag

./: .gitignore  README.md  pyproject.toml
src/: data_loader.py  main.py  rag_runner.py  test.ipynb  utils.py
src/chroma_db/18c345af-88cb-4d36-9515-95841171d690/: index_metadata.pickle
